--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.4",
     "react-mouseflow": "^1.0.3",
+    "react-mouseflow": "^1.0.3",
     "react-router-dom": "^6.8.1",
     "recharts": "^2.8.0"
   },
